packages/rust/crates/xiuxian-qianji/tests/unit/bin/qianji/lint/bpmn_dmn/snapshots/qianji__tests__lint__bpmn_dmn__cases_05__qianji_lint_compact_redundant_static_interaction_producer_fix.snap
---
source: packages/rust/crates/xiuxian-qianji/src/bin/../../tests/unit/bin/qianji/lint/bpmn_dmn/cases_05.rs
expression: "stable_temp_output(&output.rendered, &temp_dir)"
---
[lint:error] $TEMP/redundant_static_interaction_producer.bpmn bpmn
Source: $TEMP/redundant_static_interaction_producer.bpmn
Issues: 1

[bpmn.redundant_static_qianji_interaction_producer] Error: Static qianji interaction still has a UI producer serviceTask
   ,-[ $TEMP/redundant_static_interaction_producer.bpmn:7:5 ]
 7 |    <bpmn:serviceTask id="prepare_screen" implementation="${environment.services.runAgent}">
   |    `---------------------------------------------------------------------------------------- redundant static UI producer should be removed
   |Help: Remove this no-input/no-tool producer and keep fixed qianji choices on userTask 'ask_screen'.
    |Contract: qianji.bpmn.user_task.interaction.v1 requires fixed interaction metadata to live on the userTask without a no-input/no-tool producer serviceTask.

Expected XML:
```xml
<!-- Remove serviceTask 'prepare_screen' and reconnect its incoming sequenceFlow(s) directly to userTask 'ask_screen'. -->
<userTask id="ask_screen">
  <extensionElements>
    <qianji:config>
      <!-- Remove stale qianji:inputs value(s): currentQuestion,currentChoices. -->
      <qianji:inputs></qianji:inputs>
      <!-- Keep the existing static qianji:interaction with qianji:question, qianji:choice, and qianji:result. -->
    </qianji:config>
  </extensionElements>
</userTask>
```

Return unified diff only.
