packages/rust/crates/xiuxian-qianji/tests/unit/bin/qianji/lint/bpmn_dmn/snapshots/qianji__tests__lint__bpmn_dmn__cases_05__qianji_lint_compact_static_interaction_producer_fix.snap
---
source: packages/rust/crates/xiuxian-qianji/src/bin/../../tests/unit/bin/qianji/lint/bpmn_dmn/cases_05.rs
expression: "stable_temp_output(&output.rendered, &temp_dir)"
---
[lint:error] $TEMP/static_interaction_producer.bpmn bpmn
Source: $TEMP/static_interaction_producer.bpmn
Issues: 1

[bpmn.static_qianji_interaction_producer] Error: Static qianji choices should be declared on the userTask
   ,-[ $TEMP/static_interaction_producer.bpmn:7:5 ]
 7 |    <bpmn:serviceTask id="prepare_screen" implementation="${environment.services.runAgent}">
   |    `---------------------------------------------------------------------------------------- static UI producer should not invoke an LLM
   |Help: Remove this producer, clear stale qianji:inputs, and keep fixed qianji choices on userTask 'ask_screen'.
    |Contract: qianji.bpmn.user_task.interaction.v1 requires fixed questions and choices to be declared as static userTask interaction XML.

Expected XML:
```xml
<!-- Remove serviceTask 'prepare_screen' and reconnect its incoming sequenceFlow(s) directly to userTask 'ask_screen'. -->
<userTask id="ask_screen">
  <extensionElements>
    <qianji:config>
      <!-- Remove stale qianji:inputs value(s): currentQuestion,currentChoices. -->
      <qianji:inputs></qianji:inputs>
      <qianji:interaction type="choice_input">
        <qianji:question>Write the user-facing question text here.</qianji:question>
        <qianji:choice value="option_value" label="Option label">Optional concise help text.</qianji:choice>
        <qianji:choice value="other_value" label="Other option">Optional concise help text.</qianji:choice>
        <qianji:result output="safetyAnswer"/>
      </qianji:interaction>
    </qianji:config>
  </extensionElements>
</userTask>
```

Return unified diff only.
